Neural learning is working, I guess.

--- a/NeuralNetwork/NeuralNetwork/NeuralNetwork.csproj
+++ b/NeuralNetwork/NeuralNetwork/NeuralNetwork.csproj
@@ -56,6 +56,7 @@
     <Compile Include="NeuralNetworkModel\Synapse.cs" />
     <Compile Include="RobotModel\Battery.cs" />
     <Compile Include="RobotModel\Robot.cs" />
+    <Compile Include="RobotModel\RobotMode.cs" />
     <Compile Include="XOR_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
