--- a/NeuralNetwork/NeuralNetwork/NeuralNetwork.csproj
+++ b/NeuralNetwork/NeuralNetwork/NeuralNetwork.csproj
@@ -55,6 +55,7 @@
     <Compile Include="NeuralNetworkModel\Sigmoid.cs" />
     <Compile Include="NeuralNetworkModel\Synapse.cs" />
     <Compile Include="RobotModel\Battery.cs" />
+    <Compile Include="Helpers\DirectionTranslator.cs" />
     <Compile Include="RobotModel\Robot.cs" />
     <Compile Include="RobotModel\RobotMode.cs" />
     <Compile Include="XOR_Test.cs" />
