--- a/NeuralNetwork/NeuralNetworkPresentation/NeuralNetwork.Presentation.csproj
+++ b/NeuralNetwork/NeuralNetworkPresentation/NeuralNetwork.Presentation.csproj
@@ -46,16 +46,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="PresentationWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="PresentationWindow.Designer.cs">
+      <DependentUpon>PresentationWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="SetupWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SetupWindow.Designer.cs">
+      <DependentUpon>SetupWindow.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="PresentationWindow.resx">
+      <DependentUpon>PresentationWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
