More options in setup window, icons, no need to look inside the code to change parameters.

--- a/NeuralNetwork/NeuralNetworkPresentation/NeuralNetwork.Presentation.csproj
+++ b/NeuralNetwork/NeuralNetworkPresentation/NeuralNetwork.Presentation.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>exe_icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -93,6 +96,9 @@
       <Project>{ee818247-d11c-4a21-a8de-85b81258663c}</Project>
       <Name>NeuralNetwork.Library</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="exe_icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
