Refactor AF. Arrows movement protection.

--- a/NeuralNetwork/NeuralNetwork/NeuralNetwork.Library.csproj
+++ b/NeuralNetwork/NeuralNetwork/NeuralNetwork.Library.csproj
@@ -50,21 +50,34 @@
     <Compile Include="AreaModel\Field.cs" />
     <Compile Include="GeneralHelpers\MovementType.cs" />
     <Compile Include="GeneralHelpers\Remover.cs" />
-    <Compile Include="MovementAlgorythims\ArrayType.cs" />
+    <Compile Include="MovementAlgorythims\ArraysHandler.cs" />
+    <Compile Include="MovementAlgorythims\Enums\ArrayType.cs" />
     <Compile Include="GeneralHelpers\Minimizer.cs" />
-    <Compile Include="MovementAlgorythims\Direction.cs" />
+    <Compile Include="MovementAlgorythims\Enums\Direction.cs" />
+    <Compile Include="MovementAlgorythims\Explorer.cs" />
+    <Compile Include="MovementAlgorythims\Mover.cs" />
+    <Compile Include="MovementAlgorythims\PositionHandler.cs" />
+    <Compile Include="MovementAlgorythims\Retreater.cs" />
     <Compile Include="MovementAlgorythims\RulingBody.cs" />
     <Compile Include="NeuralNetworkModel\Data.cs" />
+    <Compile Include="NeuralNetworkModel\NetworkHandlers\LayerCreator.cs" />
     <Compile Include="NeuralNetworkModel\Network.cs" />
     <Compile Include="NeuralNetworkModel\Neuron.cs" />
     <Compile Include="GeneralHelpers\Randomizer.cs" />
     <Compile Include="NeuralNetworkModel\Sigmoid.cs" />
     <Compile Include="NeuralNetworkModel\Synapse.cs" />
+    <Compile Include="NeuralNetworkModel\NetworkHandlers\Trainer.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="RobotModel\RobotHandlers\ArrayHandler.cs" />
     <Compile Include="RobotModel\Battery.cs" />
     <Compile Include="GeneralHelpers\DirectionTranslator.cs" />
+    <Compile Include="RobotModel\RobotHandlers\BatteryHandler.cs" />
+    <Compile Include="RobotModel\RobotHandlers\Explorer.cs" />
+    <Compile Include="RobotModel\RobotHandlers\NetworkHandler.cs" />
+    <Compile Include="RobotModel\RobotHandlers\PositionHandler.cs" />
+    <Compile Include="RobotModel\RobotHandlers\Retreater.cs" />
     <Compile Include="RobotModel\Robot.cs" />
-    <Compile Include="RobotModel\RobotMode.cs" />
+    <Compile Include="RobotModel\Enums\RobotMode.cs" />
     <Compile Include="Tests\ListRemoval_Test.cs" />
     <Compile Include="Tests\XOR_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
