--- a/NeuralNetwork/NeuralNetworkPresentation/NeuralNetwork.Presentation.csproj
+++ b/NeuralNetwork/NeuralNetworkPresentation/NeuralNetwork.Presentation.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>exe_icon.ico</ApplicationIcon>
+    <ApplicationIcon>Images\exe_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -105,7 +105,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="exe_icon.ico" />
+    <Content Include="Images\exe_icon.ico" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
