--- a/NeuralNetwork/NeuralNetwork.ProjectParameters/NeuralNetwork.ProjectParameters.csproj
+++ b/NeuralNetwork/NeuralNetwork.ProjectParameters/NeuralNetwork.ProjectParameters.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Reference Include="System">
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.1\System.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
